--- a/projects/codesandbox-app/pages/Sandbox/Editor/Header/MenuBar/titlebar.css
+++ b/projects/codesandbox-app/pages/Sandbox/Editor/Header/MenuBar/titlebar.css
@@ -107,60 +107,37 @@
   display: none;
 }
 
-.monaco-workbench
-  > .part.titlebar
-  > .window-controls-container
-  > .window-icon-bg {
+.monaco-workbench > .part.titlebar > .window-controls-container > .window-icon-bg {
   display: inline-block;
   -webkit-app-region: no-drag;
   height: 100%;
   width: 33.34%;
 }
 
-.monaco-workbench
-  > .part.titlebar
-  > .window-controls-container
-  .window-icon
-  svg {
+.monaco-workbench > .part.titlebar > .window-controls-container .window-icon svg {
   shape-rendering: crispEdges;
   text-align: center;
 }
 
-.monaco-workbench
-  > .part.titlebar
-  > .window-controls-container
-  > .window-icon-bg
-  > .window-icon {
+.monaco-workbench > .part.titlebar > .window-controls-container > .window-icon-bg > .window-icon {
   height: 100%;
   width: 100%;
   -webkit-mask-size: 23.1%;
 }
 
-.monaco-workbench
-  > .part.titlebar
-  > .window-controls-container
-  > .window-icon-bg:hover {
+.monaco-workbench > .part.titlebar > .window-controls-container > .window-icon-bg:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.monaco-workbench
-  > .part.titlebar.light
-  > .window-controls-container
-  > .window-icon-bg:hover {
+.monaco-workbench > .part.titlebar.light > .window-controls-container > .window-icon-bg:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-.monaco-workbench
-  > .part.titlebar
-  > .window-controls-container
-  > .window-icon-bg.window-close-bg:hover {
+.monaco-workbench > .part.titlebar > .window-controls-container > .window-icon-bg.window-close-bg:hover {
   background-color: rgba(232, 17, 35, 0.9);
 }
 
-.monaco-workbench
-  > .part.titlebar
-  > .window-controls-container
-  .window-icon.window-close:hover {
+.monaco-workbench > .part.titlebar > .window-controls-container .window-icon.window-close:hover {
   background-color: white;
 }
 
@@ -178,8 +155,8 @@
 }
 
 .monaco-workbench.fullscreen .menubar {
-  margin: 0px;
-  padding: 0px 5px;
+  margin: 0;
+  padding: 0 5px;
 }
 
 .monaco-workbench .menubar > .menubar-menu-button {
@@ -195,22 +172,19 @@
 
 .monaco-workbench .menubar .menubar-menu-items-holder {
   position: absolute;
-  left: 0px;
+  left: 0;
   opacity: 1;
   z-index: 2000;
 }
 
 .monaco-workbench .menubar .menubar-menu-items-holder.monaco-menu-container {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe WPC',
-    'Segoe UI', 'HelveticaNeue-Light', 'Ubuntu', 'Droid Sans', sans-serif;
+  'Segoe UI', 'HelveticaNeue-Light', 'Ubuntu', 'Droid Sans', sans-serif;
   outline: 0;
   border: none;
   font-size: 0.75rem;
 }
 
-.monaco-workbench
-  .menubar
-  .menubar-menu-items-holder.monaco-menu-container
-  :focus {
+.monaco-workbench .menubar .menubar-menu-items-holder.monaco-menu-container :focus {
   outline: 0;
 }
